// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FloatingTokensLayer > renders float and drift tokens with announcement 1`] = `
<div
  class="pointer-events-none fixed inset-0 z-[70] overflow-visible"
  data-testid="hasanat-token-layer"
>
  <div
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Hasanāt +3. Total: 128.
  </div>
  <div
    class="pointer-events-none absolute left-0 top-0 will-change-transform"
    style="transform: translate3d(220px, 560px, 0);"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none select-none rounded-full bg-emerald-500/90 px-3 py-1.5 text-xs font-semibold text-white shadow-[0_16px_40px_rgba(16,185,129,0.35)] ring-1 ring-emerald-300/35 backdrop-blur-sm dark:bg-emerald-400/90 dark:text-emerald-950 animate-hasanat-token-float"
      style="opacity: 0; transform: translate(-50%, -50%) scale(0.85); contain: paint; --hasanat-float-distance: 58px; --hasanat-float-duration: 900ms;"
    >
      <div
        class="flex flex-col items-center gap-0.5 leading-none"
      >
        <span
          class="text-base font-semibold tracking-tight"
        >
          +
          1
        </span>
        <span
          class="text-[0.6rem] font-medium uppercase tracking-[0.35em] text-emerald-50/80 dark:text-emerald-900/70"
        >
          Hasanāt
        </span>
      </div>
    </div>
  </div>
  <div
    class="pointer-events-none absolute left-0 top-0 will-change-transform"
    style="transform: translate3d(240px, 580px, 0);"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none select-none rounded-full bg-emerald-500/90 px-3 py-1.5 text-xs font-semibold text-white shadow-[0_16px_40px_rgba(16,185,129,0.35)] ring-1 ring-emerald-300/35 backdrop-blur-sm dark:bg-emerald-400/90 dark:text-emerald-950"
      style="opacity: 0; transform: translate(-50%, -50%) scale(0.85); contain: paint;"
    >
      <div
        class="flex flex-col items-center gap-0.5 leading-none"
      >
        <span
          class="text-base font-semibold tracking-tight"
        >
          +
          3
        </span>
        <span
          class="text-[0.6rem] font-medium uppercase tracking-[0.35em] text-emerald-50/80 dark:text-emerald-900/70"
        >
          Hasanāt
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FloatingTokensLayer > shows Arabic accent labels when locale is Arabic 1`] = `
<div
  class="pointer-events-none fixed inset-0 z-[70] overflow-visible"
  data-testid="hasanat-token-layer"
>
  <div
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Hasanāt +2. Total: 128.
  </div>
  <div
    class="pointer-events-none absolute left-0 top-0 will-change-transform"
    style="transform: translate3d(240px, 580px, 0);"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none select-none rounded-full bg-emerald-500/90 px-3 py-1.5 text-xs font-semibold text-white shadow-[0_16px_40px_rgba(16,185,129,0.35)] ring-1 ring-emerald-300/35 backdrop-blur-sm dark:bg-emerald-400/90 dark:text-emerald-950"
      style="opacity: 0; transform: translate(-50%, -50%) scale(0.85); contain: paint; transition: opacity 260ms ease-out;"
    >
      <div
        class="flex flex-col items-center gap-0.5 leading-none"
      >
        <span
          class="text-base font-semibold tracking-tight"
        >
          +
          2
        </span>
        <span
          class="text-[0.6rem] font-medium uppercase tracking-[0.35em] text-emerald-50/80 dark:text-emerald-900/70"
        >
          Hasanāt
        </span>
        <span
          class="text-[0.65rem] font-medium text-emerald-100/80 dark:text-emerald-900/70"
        >
          حسنات
        </span>
      </div>
    </div>
  </div>
</div>
`;
